syntax = "proto3";

package ProtoBuffers;

// Utilizador
message LoginRequest {
    string nome = 1;
    string password = 2;
}

message LoginResponse {
  enum TipoUtilizador {
    FABRICANTE = 0;
    IMPORTADOR = 1;
    ERRO = 2;
  }
  TipoUtilizador tipo = 1;
}

message AuthOperationRequest {
    string password = 1;
    OperationRequest request = 2;
}

message OperationRequest {
    string nome = 1;
    oneof request {
        OfertaProducaoRequest producao = 2;
        OfertaEncomendaRequest encomenda = 3;
    }
}

message OperationResponse {
    enum ResponseStatusCode {
        OK = 0;
        INVALID = 1;
    }
    ResponseStatusCode code = 1;
}

// Fabricante
message OfertaProducaoRequest {
    string produto = 1;
    int32 quantMin = 2;
    int32 quantMax = 3;
    int32 precoUniMin = 4;
    int64 duracaoS = 5;
}

// Importador
message OfertaEncomendaRequest {
    string fabricante = 1;
    string produto = 2;
    int32 quant = 3;
    int32 preco = 4;
}

// Notificações
message NotificacaoOfertaProducao {
    string produto = 1;
    int32 quantMin = 2;
    int32 quantMax = 3;
    int32 precoUniMin = 4;
    string dataInicial = 5;
    string dataFinal = 6;
}

message NotificacaoResultadosImportador {
    bool aceite = 1;
    string fabricante = 2;
    string produto = 3;
    int32 quant = 4;
    int32 preco = 5;
}

message NotificacaoResultadosFabricante {
    repeated OfertaEncomendaRequest encomendas = 1;
}
